tests/codegen/fail/enum/derive_wrong_item.rs
use coasys_juniper::GraphQLEnum;

#[derive(GraphQLEnum)]
struct Test {}

fn main() {}
